# tuisprite

./: Cargo.toml  README.md  flake.nix
samples/: 16x16.json  8x8.json  face.json  fruit.json  rgbw.json
src/: app.rs  canvas.rs  cli.rs  drawing.rs  main.rs  sgr_pixel.rs
src/app/: mod.rs  runtime.rs
src/app/action/: mod.rs
src/app/config/: mod.rs  mode.rs  transparency_grid.rs
src/drawing/: color.rs  io.rs  mod.rs
src/utils/: mouse.rs
src/widgets/: canvas.rs  command_bar.rs  mod.rs  mode_indicator.rs  status_bar.rs  workspace.rs
