[package]
name = "tuisprite"
version = "0.1.0"
edition = "2024"

[dependencies]
andromeda-core = { git = "https://github.com/tryandromeda/andromeda", version = "0.1.0-draft46" }
andromeda-runtime = { git = "https://github.com/tryandromeda/andromeda", version = "0.1.0-draft46" }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
nova_vm = { git = "https://github.com/trynova/nova", version = "0.3.1", rev = "81774d30bd814d8b7ea050e252557890f76c9b69", features = ["typescript"] }
ratatui = { version = "0.30.0-alpha.5", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
