[package]
name = "tuisprite"
version = "0.1.0"
edition = "2024"

[dependencies]
andromeda-core = { git = "https://github.com/xubaiwang/andromeda", rev = "ecf41080a8fed44c7be743972ea01e7009e20776" }
andromeda-runtime = { git = "https://github.com/xubaiwang/andromeda", rev = "ecf41080a8fed44c7be743972ea01e7009e20776" }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
csscolorparser = { version = "0.7.2", features = ["serde"] }
itertools = "0.14.0"
nova_vm = { git = "https://github.com/trynova/nova", version = "0.3.1", rev = "cf2e8ea9a5a4cb0d70d9723e4b42ed7131026bcf", features = [
    "typescript",
] }
ratatui = { version = "0.29.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.48.0", features = ["full"] }
unicode-width = "0.2.0"
